name:                acid-test
version:             0.1.0.0
license:             MIT
author:              Andrew Rademacher
maintainer:          andrewrademacher@gmail.com
build-type:          Simple
cabal-version:       >=1.10

executable acid-test
    main-is:            Main.hs
    build-depends:      base >=4.6 && <4.7
    hs-source-dirs:     src 
    default-language:   Haskell2010
