name:                acid-test
version:             0.1.0.0
license:             MIT
author:              Andrew Rademacher
maintainer:          andrewrademacher@gmail.com
build-type:          Simple
cabal-version:       >=1.10

executable acid-test
    main-is:            Main.hs
    build-depends:      base       >= 4.6      && <4.7
                    ,   acid-state >= 0.12.1   && <0.13.0
                    ,   safecopy   >= 0.8.2    && <0.9.0
                    ,   containers >= 0.5.0.0  && <0.6.0.0
                    ,   mtl        >= 2.1.2    && <2.2.0
                    ,   text       >= 0.11.3.1 && <0.12.0.0
                    ,   time       >= 1.4.0.1  && <1.5.0.0
    hs-source-dirs:     src 
    default-language:   Haskell2010
