name:                postgre-orm
version:             0.1.0.0
license:             MIT
author:              Andrew Rademacher
maintainer:          andrewrademacher@gmail.com
build-type:          Simple
cabal-version:       >=1.10

executable postgre-orm
    main-is:            Main.hs
    build-depends:      base                  >= 4.6      && <4.7
                    ,   text                  >= 0.11.3.1 && <0.11.3.2
                    ,   time                  >= 1.4.0.1  && <1.4.0.2
                    ,   old-locale            >= 1.0.0.5  && <1.0.0.6
                    ,   persistent            >= 1.2.3.0  && <1.2.4.0
                    ,   persistent-postgresql >= 1.2.1    && <1.2.2
                    ,   persistent-template   >= 1.2.0.6  && <1.2.0.7
                    ,   transformers          >= 0.3.0.0  && <0.4.0.0
    hs-source-dirs:     src
    default-language:   Haskell2010
